syntax = "proto3";

enum Emotion {
    Normal = 0;
    Happy = 1;
    Pain = 2;
    Angry = 3;
    Worried = 4;
    Sad = 5;
    Crying = 6;
    Shouting = 7;
    Teary_Eyed = 8;
    Determined = 9;
    Joyous = 10;
    Inspired = 11;
    Surprised = 12;
    Dizzy = 13;
    Special0 = 14;
    Special1 = 15;
    Sigh = 16;
    Stunned = 17;
    Special2 = 18;
    Special3 = 19;
}

enum GameMode {
    CUSTOM_LOBBY = 1;
    QUICKPLAY = 2;
    RANKED = 3;
    SCRIBBLE = 4;
    TOURNAMENT = 5;
}

enum Synergy {
    NORMAL = 1;
    GRASS = 2;
    FIRE = 3;
    WATER = 4;
    ELECTRIC = 5;
    FIGHTING = 6;
    PSYCHIC = 7;
    DARK = 8;
    STEEL = 9;
    GROUND = 10;
    POISON = 11;
    DRAGON = 12;
    FIELD = 13;
    MONSTER = 14;
    HUMAN = 15;
    AQUATIC = 16;
    BUG = 17;
    FLYING = 18;
    FLORA = 19;
    ROCK = 20;
    GHOST = 21;
    FAIRY = 22;
    ICE = 23;
    FOSSIL = 24;
    SOUND = 25;
    ARTIFICIAL = 26;
    LIGHT = 27;
    WILD = 28;
    BABY = 29;
    AMORPHOUS = 30;
    GOURMET = 31;}

message Pokemon {
    string avatar = 1;
    Emotion emotion = 2;
    repeated string items = 3;
}

message DetailedStatistic {
    string name = 1;
    string avatar = 2;
    Emotion emotion = 3;
    int32 rank = 4;
    int32 elo = 5;
    int32 nbplayers = 6;
    repeated Pokemon pokemons = 7;
    repeated Synergy synergies = 8;
    repeated int32 synergyLevels = 9;
}